Added styles, but more importantly removed left over <p> tag in home.component.html. Also, added missing modules to app.module.ts.

--- a/VideoChat/ClientApp/src/app/home/home.component.html
+++ b/VideoChat/ClientApp/src/app/home/home.component.html
@@ -19,8 +19,7 @@
   </div>
   <div class="grid-top-left">
     <a href="https://www.twilio.com/video" target="_blank">
-      <img src="assets/twilio-badge-red.png" alt="Powered by Twilio" />
+      Powered by Twilio
     </a>
   </div>
 </div>
-</p>
